2011-02-10  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/job.c (_job_exec): Removed EMUNGE_CRED_UNAUTHORIZED errors
	  from the set whose origin IP address is logged.  Although the
	  credential has been successfully decoded, the client is not
	  authorized to know any of its contents.

	* src/munged/job.c (_job_exec): Added the origin IP address to the
	  logged error messages of select credential errors to aid in
	  troubleshooting.

2011-02-09  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/gids.c (_gids_hash_create): Added comment wrt xgetpwnam()
	  buffer creation.

2011-02-08  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/gids.c (_gids_update): Added guard to update of
	  do_group_stat flag for allowing a SIGHUP triggered during
	  _gids_hash_update() to reset the flag.

2011-02-03  Chris Dunlap  <cdunlap@llnl.gov>

	* munge.spec: Fixed RPM spec file for openSUSE.  (issue 5)

2011-01-26  Chris Dunlap  <cdunlap@llnl.gov>

	* : Fixed a potential deadlock in munged that can occur if clients
	  block while sending data.  The wrappers for read() & write()
	  implement a timeout by preceding the read/write calls with poll().
	  In addition, the client & server sockets have been made nonblocking
	  to protect against spurious readiness notifications.  Throughput is
	  degraded by ~6%.  (issue 1)
	* src/libcommon/munge_defs.h: Added MUNGE_SOCKET_TIMEOUT_MSECS.
	* src/munged/job.c (job_accept): Set socket connection to client as
	  nonblocking.
	* src/libmunge/m_msg_client.c (_m_msg_client_connect):
	  Set socket connection to server as nonblocking.
	* src/libcommon/m_msg.c (m_msg_send, m_msg_recv): Added support for
	  timing-out sent messages with fd_timed_write_iov() and received
	  messages with fd_timed_read_n().
	* src/libcommon/m_msg.c (_get_timeval): Added.
	* src/libcommon/fd.c (fd_timed_read_n, fd_timed_write_n,
	  fd_timed_write_iov, fd_is_nonblocking, _fd_get_poll_timeout): Added.
	* src/libcommon/fd.c (fd_set_close_on_exec, fd_set_nonblocking):