@@ -1,3 +1,13 @@
+2011-02-14  Chris Dunlap  <cdunlap@llnl.gov>
+
+	* src/libcommon/fd.c (fd_timed_read_n, fd_timed_write_n,
+	  fd_timed_write_iov): Replaced ETIME with ETIMEDOUT.  POSIX.1 denotes
+	  ETIME as an optional XSI STREAMS extension, now obsolescent.
+	  Furthermore, it is not defined on BSD.
+	* src/libcommon/fd.h: Updated comments wrt ETIMEDOUT.
+	* src/libcommon/m_msg.c (m_msg_send, m_msg_recv):
+	  Updated errno tests for ETIMEDOUT.
+
 2011-02-10  Chris Dunlap  <cdunlap@llnl.gov>
 
 	* src/munged/job.c (_job_exec): Removed EMUNGE_CRED_UNAUTHORIZED errors
